--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "declarationDir": "dist/types",
-    "outDir": "dist/",
+    "outDir": "dist/lib",
     "typeRoots": [
       "node_modules/@types",
       "src/types"
